@@ -1,7 +1,5 @@
 
 - Finish user authentication
-
-- Implement parameter forbid, require
  
 
 - Encoding check?
